--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related prod APIs "
+  message: "Welcome to Havesweets loans related PRODUCTION APIs "
   contactDetails:
-    name: "Pelias Sudhir - Product Owner"
-    email: "pelias@eazybank.com"
+    name: "Sravanthi Thallapureddy - Product Owner"
+    email: "sravanthi@havesweets.com"
   onCallSupport:
     - (723) 656-8709
     - (156) 342-0956
