--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -2,10 +2,10 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related PRODUCTION APIs "
+  message: "Welcome to Havesweets accounts related PRODUCTION APIs "
   contactDetails:
-    name: "Reine Aishwarya - Product Owner"
-    email: "aishwarya@eazybank.com"
+    name: "Rajesh pagadala - Product Owner"
+    email: "rajesh@havesweets.com"
   onCallSupport:
     - (453) 392-4829
     - (236) 203-0384
